--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,13 +2,16 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Roboto Mono', monospace;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+:root {
+  color-scheme: dark;
 }
 
 * {
